added some linkage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="interface.css" />
 </head>
 <body>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
