trying to get nav bar

--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="interface.css" />
+  <meta http-equiv="refresh" content="0; URL=someonesom.github.io/MindusIdle#res" />
 </head>
 <body>
+  <ul class="nav">
+    <li><a href="#res">Resources</a></li>
+    <li><a href="#shop">Shop</a></li>
+    <li><a href="#upg">Upgrades</a></li>
+    <li><a href="#land">Land</a></li>
+  </ul>
+  <div id="res">
+    <p>nothing yet</p>
+  </div>
+  <div id="shop">
+    <p>nothing yet</p>
+  </div>
+  <div id="upg">
+    <p>nothing yet</p>
+  </div>
+  <div id="land">
+    <p>nothing yet</p>
+  </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
