--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="interface.css" />
+  <link rel="stylesheet" href="interface.css" />
 </head>
 <body>
   <ul class="nav">
