getting ready for working nav bar

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <li><a href="#upg">Upgrades</a></li>
     <li><a href="#land">Land</a></li>
   </ul>
-  <div id="res">
+  <div id="res"><br />
     <p>nothing yet</p>
   </div>
-  <div id="shop">
+  <div id="shop"><br />
     <p>nothing yet</p>
   </div>
-  <div id="upg">
+  <div id="upg"><br />
     <p>nothing yet</p>
   </div>
-  <div id="land">
+  <div id="land"><br />
     <p>nothing yet</p>
   </div>
   <script type="text/javascript" src="main.js"></script>
