nav bar might work now

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 </head>
 <body>
   <ul class="nav">
-    <li><a href="#res">Resources</a></li>
-    <li><a href="#shop">Shop</a></li>
-    <li><a href="#upg">Upgrades</a></li>
-    <li><a href="#land">Land</a></li>
+    <li><a href="javascript:enableDiv('res')">Resources</a></li>
+    <li><a href="javascript:enableDiv('shop')">Shop</a></li>
+    <li><a href="javascript:enableDiv('upg')">Upgrades</a></li>
+    <li><a href="javascript:enableDiv('land')">Land</a></li>
   </ul>
   <div id="res"><br />
     <p>nothing yet</p>
