--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <li><a href="javascript:enableDiv('land')">Land</a></li>
   </ul>
   <div id="res"><br />
-    <p>nothing yet</p>
+    <p>nothing yet, soon</p>
   </div>
   <div id="shop"><br />
     <p>nothing yet</p>
