just changing text

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <li><a href="javascript:enableDiv('land');">Land</a></li>
   </ul>
   <div id="res"><br />
-    <p>nothing yet, soon</p>
+    <p>Resources not ready yet</p>
   </div>
   <div id="shop"><br />
-    <p>nothing yet</p>
+    <p>Shop not ready yet</p>
   </div>
   <div id="upg"><br />
-    <p>nothing yet</p>
+    <p>Upgrades not ready yet</p>
   </div>
   <div id="land"><br />
-    <p>nothing yet</p>
+    <p>Land not ready yet</p>
   </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
