--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 </head>
 <body>
   <ul class="nav">
-    <li><a href="javascript:enableDiv('res');">Resources</a></li>
-    <li><a href="javascript:enableDiv('shop');">Shop</a></li>
-    <li><a href="javascript:enableDiv('upg');">Upgrades</a></li>
-    <li><a href="javascript:enableDiv('land');">Land</a></li>
+    <li><a href="javascript:enableDiv('res'); colorA('res');" class="res">Resources</a></li>
+    <li><a href="javascript:enableDiv('shop'); colorA('shop');" class="shop">Shop</a></li>
+    <li><a href="javascript:enableDiv('upg'); colorA('upg');" class="upg">Upgrades</a></li>
+    <li><a href="javascript:enableDiv('land'); colorA('land');" class="land">Land</a></li>
   </ul>
   <div id="res"><br />
     <p>Resources not ready yet</p>
