--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <li><a href="javascript:enableDiv('land'); colorA('land');" class="land">Land</a></li>
   </ul>
   <div id="res"><br />
-    <p>Resources not ready yet</p>
+    <p>Resources not ready yet, next on list</p>
   </div>
   <div id="shop"><br />
     <p>Shop not ready yet</p>
