added linking for text.js

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <p>Land not ready yet</p>
   </div>
   <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="text.js"></script>
 </body>
 </html>
