Title and analytics

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+  <title>MindusIdle</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECR7K8ZWW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ECR7K8ZWW5');
+  </script>
   <link rel="stylesheet" href="interface.css" />
 </head>
 <body>
