--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 <body>
   <ul class="nav">
     <li><a href="javascript:enableDiv('res'); colorA('res');" class="res">Resources</a></li>
-    <li><a href="javascript:enableDiv('shop'); colorA('shop');" class="shop">Shop</a></li>
+    <li><a href="javascript:enableDiv('drshop'); colorA('drshop');" class="drshop">Drill Shop</a></li>
+    <li><a href="javascript:enableDiv('crshop'); colorA('crshop');" class="crshop">Crafting Shop</a></li>
     <li><a href="javascript:enableDiv('upg'); colorA('upg');" class="upg">Upgrades</a></li>
     <li><a href="javascript:enableDiv('land'); colorA('land');" class="land">Land</a></li>
   </ul>
   <div id="res"><br />
     <p><span id="copperres">0</span> Copper</p>
   </div>
-  <div id="shop"><br />
-    <p>Shop not ready yet</p>
+  <div id="drshop"><br />
+    <p> Drill Shop not ready yet</p>
+  </div>
+  <div id="crshop"><br />
+    <p>Crafting Shop not ready yet</p>
   </div>
   <div id="upg"><br />
     <p>Upgrades not ready yet</p>
