--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <p><span id="copperres">0</span> Copper</p>
   </div>
   <div id="drshop"><br />
-    <img src="img/item-copper.png" onclick="selectImg('coppimg')" id="coppimg" /><img src="img/item-lead.png" onclick="selectImg('leadimg')" id="leadimg" /><br />
-    <p>Rest of Drill Shop not ready yet</p>
+    <p><img src="img/item-copper.png" onclick="selectImg('coppimg')" id="coppimg" /><img src="img/item-lead.png" onclick="selectImg('leadimg')" id="leadimg" /><br />
+    Rest of Drill Shop not ready yet</p>
   </div>
   <div id="crshop"><br />
     <p>Crafting Shop not ready yet</p>
