--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="res"><br />
     <p><span id="copperres">0</span> Copper</p>
   </div>
-  <div id="drshop"><br />
+  <div id="drshop"><br /><br />
     <p><img src="img/item-copper.png" onclick="selectImg('coppimg')" id="coppimg" /><img src="img/item-lead.png" onclick="selectImg('leadimg')" id="leadimg" /><br />
     Rest of Drill Shop not ready yet</p>
   </div>
