--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   <div id="drshop"><br /><br />
     <p><img src="img/item-copper.png" onclick="selectImg('coppimg')" id="coppimg" /><img src="img/item-lead.png" onclick="selectImg('leadimg')" id="leadimg" /><br />
-    Rest of Drill Shop not ready yet</p>
+    Rest of Drill Shop not ready yet, soon</p>
   </div>
   <div id="crshop"><br />
     <p>Crafting Shop not ready yet</p>
