--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <p><span id="copperres">0</span> Copper</p>
   </div>
   <div id="drshop"><br /><br />
-    <img src="img/item-copper.png" onclick="selectImg('coppimg')" id="coppimg" />
-      <img src="img/item-lead.png" onclick="selectImg('leadimg')" id="leadimg" />
-      <img src="img/item-scrap.png" onlick="selectImg('scrpimg')" id="scrpimg" />
-      <img src="img/item-sand.png" onlick="selectImg('sandimg')" id="sandimg" />
-      <img src="img/item-coal.png" onlick="selectImg('coalimg')" id="coalimg" />
-      <img src="img/item-titanium.png" onlick="selectImg('titaimg')" id="titaimg" />
-      <img src="img/item-thorium.png" onlick="selectImg('thorimg')" id="thorimg" />
+    <img src="img/item-copper.png" onclick="selectImg('coppimg');" id="coppimg" />
+    <img src="img/item-lead.png" onclick="selectImg('leadimg');" id="leadimg" />
+    <img src="img/item-scrap.png" onlick="selectImg('scrpimg');" id="scrpimg" />
+    <img src="img/item-sand.png" onlick="selectImg('sandimg');" id="sandimg" />
+    <img src="img/item-coal.png" onlick="selectImg('coalimg');" id="coalimg" />
+    <img src="img/item-titanium.png" onlick="selectImg('titaimg');" id="titaimg" />
+    <img src="img/item-thorium.png" onlick="selectImg('thorimg');" id="thorimg" />
     <p><br />Rest of Drill Shop not ready yet, soon</p>
   </div>
   <div id="crshop"><br />
