--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <div id="drshop"><br /><br />
     <img src="img/item-copper.png" onclick="selectImg('coppimg');" id="coppimg" />
     <img src="img/item-lead.png" onclick="selectImg('leadimg');" id="leadimg" />
-    <img src="img/item-scrap.png" onlick="selectImg('scrpimg');" id="scrpimg" />
-    <img src="img/item-sand.png" onlick="selectImg('sandimg');" id="sandimg" />
-    <img src="img/item-coal.png" onlick="selectImg('coalimg');" id="coalimg" />
-    <img src="img/item-titanium.png" onlick="selectImg('titaimg');" id="titaimg" />
-    <img src="img/item-thorium.png" onlick="selectImg('thorimg');" id="thorimg" />
+    <img src="img/item-scrap.png" onclick="selectImg('scrpimg');" id="scrpimg" />
+    <img src="img/item-sand.png" onclick="selectImg('sandimg');" id="sandimg" />
+    <img src="img/item-coal.png" onclick="selectImg('coalimg');" id="coalimg" />
+    <img src="img/item-titanium.png" onclick="selectImg('titaimg');" id="titaimg" />
+    <img src="img/item-thorium.png" onclick="selectImg('thorimg');" id="thorimg" />
     <p><br />Rest of Drill Shop not ready yet, soon</p>
   </div>
   <div id="crshop"><br />
