--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <img src="img/item-coal.png" onclick="selectImg('coalimg');" id="coalimg" />
     <img src="img/item-titanium.png" onclick="selectImg('titaimg');" id="titaimg" />
     <img src="img/item-thorium.png" onclick="selectImg('thorimg');" id="thorimg" /><br />
-    <img src="img/drill-mechanical.png" /><p> <span id="mechamount">0</span>
-    <button onclick="buyMech(1)">Buy 1</button><button onclick="buyMech(maxA('mech'))">Buy <span id="mechmax">0</span></button>
+    <p><img src="img/drill-mechanical.png" /><p> <span id="mechamount">0</span>
+    <button onclick="buyMech(1)">Buy 1</button><button onclick="buyMech(maxA('mech'))">Buy <span id="mechmax">0</span></button></p>
   </div>
   <div id="crshop"><br />
     <p>Crafting Shop not ready yet</p>
