--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <img src="img/item-coal.png" onclick="selectImg('coalimg');" id="coalimg" />
     <img src="img/item-titanium.png" onclick="selectImg('titaimg');" id="titaimg" />
     <img src="img/item-thorium.png" onclick="selectImg('thorimg');" id="thorimg" /><br />
-    <img src="img/drill-mechanical.png" style="display: inline-block;" /><p> <span id="mechamount">0</span></p>
-    <button onclick="buyMech(1)">Buy 1</button><button onclick="buyMech(maxA('mech'))">Buy <span id="mechmax">0</span></button>
+    <img src="img/drill-mechanical.png" /><p> <span id="mechamount">0</span></p>
+    <button onclick="buyMech(1)">Buy 1</button><button onclick="buyMech(maxA('mech'))">Buy <span id="mechmax">0</span></button><br />
+    <p>Cost: <span id="mechcoppercost">0</span> Copper <span id="mechlandcost">0</span> Land</p><br />
   </div>
   <div id="crshop"><br />
     <p>Crafting Shop not ready yet</p>
