--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img src="img/item-titanium.png" onclick="selectImg('titaimg');" id="titaimg" />
     <img src="img/item-thorium.png" onclick="selectImg('thorimg');" id="thorimg" /><br /><br />
     <img src="img/drill-mechanical.png" /><p> You have: <span id="mechamount">0</span></p>
-    <button onclick="buyMech(1)">Buy 1</button><button onclick="buyMech(maxA('mech'))">Buy <span id="mechmax">0</span></button>
+    <button onclick="buyMech(1)">Buy 1</button><button onclick="buyMech(maxA('mech'))">Buy <span id="mechmax">0</span></button><br />
     <p>Cost: <span id="mechcoppercost">0</span> Copper <span id="mechlandcost">0</span> Land</p><br />
   </div>
   <div id="crshop"><br />
