bug fix for styling

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <img src="img/item-coal.png" onclick="selectImg('coalimg');" id="coalimg" />
     <img src="img/item-titanium.png" onclick="selectImg('titaimg');" id="titaimg" />
     <img src="img/item-thorium.png" onclick="selectImg('thorimg');" id="thorimg" /><br />
-    <ul class="crnav">
-      <li><a href="javascript:enableDiv('mech', divscr); colorA('mech', divscr);" class="mech">Mechanical Drill</a></li>
-      <li><a href="javascript:enableDiv('pneu', divscr); colorA('pneu', divscr);" class="pneu">Pneumatic Drill</a></li>
-      <li><a href="javascript:enableDiv('lasr', divscr); colorA('lasr', divscr);" class="lasr">Laser Drill</a></li>
-      <li><a href="javascript:enableDiv('arbl', divscr); colorA('arbl', divscr);" class="arbl">Airblast Drill</a></li>
+    <ul class="drnav">
+      <li><a href="javascript:enableDiv('mech', divsdr); colorA('mech', divsdr);" class="mech">Mechanical Drill</a></li>
+      <li><a href="javascript:enableDiv('pneu', divsdr); colorA('pneu', divsdr);" class="pneu">Pneumatic Drill</a></li>
+      <li><a href="javascript:enableDiv('lasr', divsdr); colorA('lasr', divsdr);" class="lasr">Laser Drill</a></li>
+      <li><a href="javascript:enableDiv('arbl', divsdr); colorA('arbl', divsdr);" class="arbl">Airblast Drill</a></li>
     </ul>
     <div id="mech">
       <p>Mech Not ready yet</p>
