--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <li><a href="javascript:enableDiv('arbl', divsdr); colorA('arbl', divsdr);" class="arbl">Airblast Drill</a></li>
     </ul>
     <div id="mech">
-      <p>Mech Not ready yet</p>
+      <p>You have <span id="mechcount">0</span> Mechanical Drills</p>
     </div>
     <div id="pneu">
       <p>Pneu Not ready yet</p>
