added land i guess

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <p>Upgrades not ready yet</p>
   </div>
   <div id="land"><br />
-    <p>Land not ready yet</p>
+    <p>You have <span id="landcount">0</span> Land available</p>
   </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
