vscode commit test

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="mech">
       <p>You have <span id="0count">0</span> Mechanical Drills producing <span id="0out">0</span> Copper per second.<br />
         Buying 1 will cost <span id="0cost0">0</span> Copper and <span id="0cost16">0</span> Land.</p>
-      <button onclick="buy(drills.mech, 1);">Buy 1</button>
+      <button onclick="buy(obj.mech, 1);">Buy 1</button>
     </div>
     <div id="pneu">
       <p>Pneu Not ready yet</p>
