Better text updates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
     <li><a onclick="enableDiv('land', divsmain);colorA('land', divsmain);" class="land">Land</a></li>
   </ul>
   <div id="res">
-    <p><span id="copperres">0</span> Copper</p>
+    <p>You have:<br />
+      <span id="0res">0</span> Copper<br />
+      <span id="1res">0</span> Lead<br />
+      <span id="2res">0</span> Scrap<br />
+      <span id="3res">0</span> Sand<br />
+      <span id="4res">0</span> Graphite<br />
+      <span id="5res">0</span> Metaglass<br />
+      <span id="6res">0</span> Spore Pod<br />
+      <span id="7res">0</span> Coal<br />
+      <span id="8res">0</span> Titanium<br />
+      <span id="9res">0</span> Thorium<br />
+      <span id="10res">0</span> Silicon<br />
+      <span id="11res">0</span> Plastanium<br />
+      <span id="12res">0</span> Phase Fabric<br />
+      <span id="13res">0</span> Surge Alloy<br />
+      <span id="14res">0</span> Blast Compound<br />
+      <span id="15res">0</span> Pyratite</p>
   </div>
   <div id="drshop">
     <img src="img/item-copper.png" onclick="selectImg('coppimg');" id="coppimg" />
@@ -39,7 +55,7 @@
       <li><a onclick="enableDiv('arbl', divsdr);colorA('arbl', divsdr);" class="arbl">Airblast Drill</a></li>
     </ul>
     <div id="mech">
-      <p>You have <span id="0count">0</span> Mechanical Drills producing <span id="0out">0</span> Copper per second.<br />
+      <p>You have <span id="0count">0</span> Mechanical Drills producing <span id="0out0">0</span> Copper per second.<br />
         Buying 1 will cost <span id="0cost0">0</span> Copper and <span id="0cost16">0</span> Land.</p>
       <button onclick="buy(obj.mech, 1);">Buy 1</button>
     </div>
