--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    gtag('js', new Date())
 
     gtag('config', 'G-ECR7K8ZWW5');
   </script>
