balance changes and removed redundancy

--- a/index.html
+++ b/index.html
@@ -43,23 +43,11 @@
   <div id="drshop">
     <ul class="drnav">
       <li><a onclick="enableDiv('mech', divsdr);colorA('mech', divsdr);" class="mech">Mechanical Drill</a></li>
-      <li><a onclick="enableDiv('pneu', divsdr);colorA('pneu', divsdr);" class="pneu">Pneumatic Drill</a></li>
-      <li><a onclick="enableDiv('lasr', divsdr);colorA('lasr', divsdr);" class="lasr">Laser Drill</a></li>
-      <li><a onclick="enableDiv('arbl', divsdr);colorA('arbl', divsdr);" class="arbl">Airblast Drill</a></li>
     </ul>
     <div id="mech">
-      <p>You have <span id="0count">0</span> Mechanical Drills producing <span id="0out0">0</span> Copper per second.<br />
+      <p>You have <span id="0count">0</span> Mechanical Drills producing <span id="0out0">0</span> Copper and <span id="0out1">0</span> Lead per second.<br />
         Buying 1 will cost <span id="0cost0">0</span> Copper and <span id="0cost16">0</span> Land.</p>
       <button onclick="buy(obj.mech, 1);">Buy 1</button>
-    </div>
-    <div id="pneu">
-      <p>Pneu Not ready yet</p>
-    </div>
-    <div id="lasr">
-      <p>Lasr Not ready yet</p>
-    </div>
-    <div id="arbl">
-      <p>Arbl Not ready yet</p>
     </div>
   </div>
   <div id="crshop">
