--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date())
-
+    //fuck it, i dont care
     gtag('config', 'G-ECR7K8ZWW5');
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
