--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
     <ul class="nav">
       <li><a href="javascript:enableDiv('duo', divslnd);" class="duo">Duo</a></li>
     </ul>
+    <div id="duo">
+      <p>You have <span id="1count">0</span> Duos producing <span id="1out16">0</span> Land per second.<br />
+      Buying 1 will cost <span id="1cost0">0</span> Copper.</p>
+      <button onclick="buy(obj.duo, 1);">Buy 1</button>
+    </div>
   </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
