started on upgrades

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
   <div id="crshop">
     <p>Crafting Shop not ready yet</p>
   </div>
-  <div id="upg">
-    <p>Upgrades not ready yet</p>
-  </div>
+  <div id="upg" />
   <div id="land">
     <p>You have <span id="landcount">0</span> Land available</p>
     <ul class="nav">
