started work on upgrades

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   <div id="crshop">
     <p>Crafting Shop not ready yet</p>
   </div>
-  <div id="upg" />
+  <div id="upg">
+  </div>
   <div id="land">
     <p>You have <span id="landcount">0</span> Land available</p>
     <ul class="nav">
