massive overhaul on how data is stored

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'G-ECR7K8ZWW5');
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="interface.css" />
+  <link rel="stylesheet" href="styles/interface.css" />
 </head>
 <body>
   <ul class="nav">
@@ -71,6 +71,7 @@
     <button onclick="wipeSave();loadSave();" class="wsbutton">Wipe Save (can't be undone)</button><br />
     <button onclick="save()">Save</button><br />
   </div>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/data.js"></script>
 </body>
 </html>
