--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="styles/interface.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icons/favicon-512x512.png">
 </head>
 <body>
   <ul class="nav">
