Bar now shows up when saved

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       <span id="12res">0</span> Phase Fabric<br />
       <span id="13res">0</span> Surge Alloy<br />
       <span id="14res">0</span> Blast Compound<br />
-      <span id="15res">0</span> Pyratite</p>
+      <span id="15res">0</span> Pyratite<br />
+      <span id="16res">0</span> Land</p>
   </div>
   <div id="drshop">
     <ul class="nav">
@@ -67,7 +68,6 @@
   <div id="upg">
   </div>
   <div id="land">
-    <p>You have <span id="landcount">0</span> Land available</p>
     <ul class="nav">
       <li><a href="javascript:enableDiv('duo', divslnd);" class="duo">Duo</a></li>
     </ul>
@@ -80,6 +80,9 @@
   <div id="options">
     <button onclick="wipeSave();loadSave();" class="wsbutton">Wipe Save (can't be undone)</button><br />
     <button onclick="save()">Save</button><br />
+  </div>
+  <div class="autosavebar">
+    <p>Saved!</p>
   </div>
   <script type="text/javascript" src="scripts/main.js"></script>
   <script type="text/javascript" src="scripts/data.js"></script>
