--- a/index.html
+++ b/index.html
@@ -47,20 +47,7 @@
       <span id="16res">0</span> Land</p>
   </div>
   <div id="drshop">
-    <ul class="nav">
-      <li><a href="javascript:enableDiv('mech', divsdr);" class="mech">Mechanical Drill</a></li>
-      <li><a href="javascript:enableDiv('leadr', divsdr);" class="leadr">Lead Drill</a></li>
-    </ul>
-    <div id="mech">
-      <p>You have <span id="0count">0</span> Mechanical Drills producing <span id="0out0">0</span> Copper and <span id="0out1">0</span> Lead per second.<br />
-        Buying 1 will cost <span id="0cost0">0</span> Copper and <span id="0cost16">0</span> Land.</p>
-      <button onclick="buy(obj.mech, 1);">Buy 1</button>
-    </div>
-    <div id="leadr">
-      <p>You have <span id="2count">0</span> Lead Drills producing <span id="2out1">0</span> Lead per second.<br />
-        Buying 1 will cost <span id="2cost0">0</span> Copper, <span id="2cost1">0</span> Lead, and <span id="2cost16">0</span> Land.</p>
-      <button onclick="buy(obj.mech, 1);">Buy 1</button>
-    </div>
+    <ul class="nav" id="drnav"></ul>
   </div>
   <div id="crshop">
     <p>Crafting Shop not ready yet</p>
@@ -68,14 +55,7 @@
   <div id="upg">
   </div>
   <div id="land">
-    <ul class="nav">
-      <li><a href="javascript:enableDiv('duo', divslnd);" class="duo">Duo</a></li>
-    </ul>
-    <div id="duo">
-      <p>You have <span id="1count">0</span> Duos producing <span id="1out16">0</span> Land per second.<br />
-      Buying 1 will cost <span id="1cost0">0</span> Copper.</p>
-      <button onclick="buy(obj.duo, 1);">Buy 1</button>
-    </div>
+    <ul class="nav" id="lndnav"></ul>
   </div>
   <div id="options">
     <button onclick="wipeSave();loadSave();" class="wsbutton">Wipe Save (can't be undone)</button><br />
@@ -84,7 +64,8 @@
   <div class="autosavebar">
     <p>Saved!</p>
   </div>
-  <script type="text/javascript" src="scripts/main.js"></script>
   <script type="text/javascript" src="scripts/data.js"></script>
+  <script type="text/javascript" src="scripts/template.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
