ready for basic use

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="description" content="Mindustry as an idle game. AKA the poor man's Mindustry. This is the Mindusidle website, not source code" />
   <title>MindusIdle</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECR7K8ZWW5"></script>
@@ -18,6 +19,11 @@
   <link rel="icon" type="image/png" sizes="512x512" href="icons/favicon-512x512.png">
 </head>
 <body>
+  <div class="version">
+    <p>v0.1.0</p>
+    <a href="https://github.com/SomeoneSom/MindusIdle">source code</a><br />
+    <a href="https://someonesom.github.io/MindusIdle/changelog.txt">changelog</a>
+  </div>
   <ul class="nav">
     <li><a href="javascript:enableDiv('res', divsmain);" class="res">Resources</a></li>
     <li><a href="javascript:enableDiv('drshop', divsmain);" class="drshop">Drill Shop</a></li>
