--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </head>
 <body>
   <div class="version">
-    <p>v0.1.0</p>
-    <a href="https://github.com/SomeoneSom/MindusIdle">source code</a><br />
-    <a href="https://someonesom.github.io/MindusIdle/changelog.txt">changelog</a>
+    <p class="version1">v0.1.0</p>
+    <a class="version2" href="https://github.com/SomeoneSom/MindusIdle">source code</a>
+    <a class="version3" href="https://someonesom.github.io/MindusIdle/changelog.txt">changelog</a>
   </div>
   <ul class="nav">
     <li><a href="javascript:enableDiv('res', divsmain);" class="res">Resources</a></li>
