--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="keywords" content="Mindusidle, MindusIdle, Mindustry, anuke, idle, idle game, web game" />
   <meta name="description" content="Mindustry as an idle game. AKA the poor man's Mindustry. This is the Mindusidle website, not source code" />
   <title>MindusIdle</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
