--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div class="version">
-    <p class="version1">v0.2.0</p>
+    <p class="version1">v0.2.1</p>
     <a class="version2" href="https://github.com/SomeoneSom/MindusIdle">source code</a>
     <a class="version3" href="https://someonesom.github.io/MindusIdle/changelog.txt">changelog</a>
   </div>
@@ -57,7 +57,7 @@
     <ul class="nav" id="drnav"></ul>
   </div>
   <div id="crshop">
-    <p>Crafting Shop not ready yet</p>
+    <ul class="nav" id="crnav"></ul>
   </div>
   <div id="upg">
   </div>
@@ -71,6 +71,7 @@
   <div class="autosavebar">
     <p>Saved!</p>
   </div>
+  <script type="text/javascript" src="modules/pluralize.js"></script>
   <script type="text/javascript" src="scripts/data.js"></script>
   <script type="text/javascript" src="scripts/template.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
