slight text change

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </div>
   <ul class="nav">
     <li><a href="javascript:enableDiv('res', divsmain);" class="res">Resources</a></li>
-    <li><a href="javascript:enableDiv('drshop', divsmain);" class="drshop">Drill Shop</a></li>
-    <li><a href="javascript:enableDiv('crshop', divsmain);" class="crshop">Crafting Shop</a></li>
+    <li><a href="javascript:enableDiv('drshop', divsmain);" class="drshop">Drills</a></li>
+    <li><a href="javascript:enableDiv('crshop', divsmain);" class="crshop">Crafting</a></li>
     <li><a href="javascript:enableDiv('upg', divsmain);" class="upg">Upgrades</a></li>
     <li><a href="javascript:enableDiv('land', divsmain);" class="land">Land</a></li>
     <li><a href="javascript:enableDiv('options', divsmain);" class="options">Options</a></li>
