added power, changed nav slightly

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   });
   </script>
   <div class="version">
-    <p class="version1">v0.3.0</p>
+    <p class="version1">v0.4.0</p>
     <a class="version2" href="https://github.com/SomeoneSom/MindusIdle">source code</a>
     <a class="version3" href="https://someonesom.github.io/MindusIdle/changelog.txt">changelog</a>
   </div>
@@ -37,6 +37,7 @@
     <li><a href="javascript:enableDiv('drshop', divsmain);" class="drshop">Drills</a></li>
     <li><a href="javascript:enableDiv('crshop', divsmain);" class="crshop">Crafting</a></li>
     <li><a href="javascript:enableDiv('upg', divsmain);" class="upg">Upgrades</a></li>
+    <li><a href="javascript:enableDiv('power', divsmain);" class="power">Power</a></li>
     <li><a href="javascript:enableDiv('land', divsmain);" class="land">Land</a></li>
     <li><a href="javascript:enableDiv('options', divsmain);" class="options">Options</a></li>
   </ul>
@@ -58,7 +59,8 @@
       <span id="13res">0</span> Surge Alloy<br />
       <span id="14res">0</span> Blast Compound<br />
       <span id="15res">0</span> Pyratite<br />
-      <span id="16res">0</span> Land</p>
+      <span id="16res">0</span> Land<br />
+      <span id="17res">0</span> Power</p>
   </div>
   <div id="drshop">
     <ul class="nav" id="drnav"></ul>
@@ -67,6 +69,9 @@
     <ul class="nav" id="crnav"></ul>
   </div>
   <div id="upg">
+  </div>
+  <div id="power">
+    <ul class="nav" id="powernav"></ul>
   </div>
   <div id="land">
     <ul class="nav" id="lndnav"></ul>
