--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
   <title>MindusIdle</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECR7K8ZWW5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date())
-    //f it, i dont care
-    gtag('config', 'G-ECR7K8ZWW5');
-  </script>
+  <script src="googleapi.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="modules/jQuery.style.switcher.js"></script>
   <link rel="stylesheet" href="styles/interface.css">
@@ -28,7 +22,7 @@
   });
   </script>
   <div class="version">
-    <p class="version1">v0.5.0</p>
+    <p class="version1">v0.5.1</p>
     <a class="version2" href="https://github.com/SomeoneSom/MindusIdle">source code</a>
     <a class="version3" href="https://someonesom.github.io/MindusIdle/changelog.txt">changelog</a>
   </div>
