--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <title>MindusIdle</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECR7K8ZWW5"></script>
-  <script src="googleapi.js"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date())
+    gtag('config', 'G-ECR7K8ZWW5');
+  </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="modules/jQuery.style.switcher.js"></script>
   <link rel="stylesheet" href="styles/interface.css">
